swagger documentation for create and edit formula questions
